# ideas-vault-kit

./: .env.example  .gitignore  CHANGELOG.md  INDEX.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: WORKFLOW.md  cli.md  prompt.md  scoring.md
examples/: README.md
examples/001-postpal-crosspost/: 01-feasibility.md  02-competition.md  03-scale-economics.md  04-founder-fit.md  05-verdict.md  README.md
examples/002-ios-restaurant-apps/: 01-feasibility.md  02-competition.md  03-scale-economics.md  04-founder-fit.md  05-verdict.md  README.md
scripts/: check_links.py  sync_assets.py
src/ideas_vault/: __init__.py  cli.py  export.py  frontmatter.py  gemini_score.py  index.py  notion_sync.py  obsidian.py  paths.py  report.py  scaffold.py  scoring.py
src/ideas_vault/_assets/pillars/: 01-feasibility.md  02-competition.md  03-scale-economics.md  04-founder-fit.md
src/ideas_vault/_assets/templates/: 01-feasibility.md  02-competition.md  03-scale-economics.md  05-verdict.md
templates/: 04-founder-fit.md  README.md  kill.md
tests/: conftest.py  test_cli.py  test_compare_kill.py  test_export.py  test_frontmatter.py  test_gemini_score.py  test_index.py  test_notion_sync.py  test_obsidian.py  test_rank.py  test_report.py  test_scaffold.py  test_scoring.py
