[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "ideas-vault-kit"
version = "0.1.0"
description = "Markdown idea vault with a 4-pillar scoring framework, tiny CLI, and provider-agnostic LLM prompt."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bao Nguyen" }]
keywords = ["ideas", "cli", "markdown", "startup", "indie-hacker", "scoring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "twine>=5.1",
]

[project.scripts]
ivault = "ideas_vault.cli:cli"

[project.urls]
Homepage = "https://github.com/barobaonguyen/ideas-vault-kit"
Repository = "https://github.com/barobaonguyen/ideas-vault-kit"
Issues = "https://github.com/barobaonguyen/ideas-vault-kit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ideas_vault"]
artifacts = ["src/ideas_vault/_assets/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
